# play-with-vdf

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  minroot.rs
tests/: cli.rs
